# YAGF

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  README.md  YAGF.d3d.vcxproj  YAGF.d3d.vcxproj.filters  YAGF.shared.vcxitems  YAGF.sln  YAGF.vulkan.vcxproj  YAGF.vulkan.vcxproj.filters  assimp.android.vcxproj  assimp.shared.vcxitems  assimp.shared.vcxitems.filters  assimp.windows.vcxproj  assimp.windows.vcxproj.filters  d3dapi.cpp  d3dshaders.cpp  glshaders.cpp  run-clang.ps1  runtime.cpp  sunlight_frag.spv  sunlight_vert.spv
YAGF/: .gitignore  CMakeLists.txt  main.cpp  runtime.cpp
YAGF.vulkan/: ReadMe.txt
YAGF/bld/Debug/: YAGF.lib
YAGF/examples/: gaussianblur.cpp  mesh.cpp  oit.cpp  ssao.cpp  text.cpp
YAGF/include/Core/: CMeshBuffer.h  FBO.h  IMeshBuffer.h  S3DVertex.h  SColor.h  Shaders.h  Singleton.h  VAO.h
YAGF/include/Loaders/: B3D.h  IReadFile.h
YAGF/include/Maths/: vector2d.h  vector3d.h
YAGF/include/Util/: Debug.h  GeometryCreator.h  Misc.h  Samplers.h  Text.h
bld/tfx-ocl.dir/Debug/: tfx-ocl.vcxprojResolveAssemblyReference.cache
examples/: CMakeLists.txt  anchorBC1.DDS  anchorBC3.DDS  gaussianblur.cpp  hc_bodyBC1.DDS  ibl.cpp  mesh.cpp  meshdx12.cpp  mouse_texture.DDS  object_pass_pix.hlsl  object_pass_vtx.hlsl  oit.cpp  pix.hlsl  screenquad.hlsl  skirt.DDS  skybox.cpp  skyboxdx12.cpp  ssao.cpp  ssao_pix.hlsl  ssao_vtx.hlsl  ssaodx12.cpp  text.cpp  tfx-ocl.cpp  tfx.cpp  vtx.hlsl  xue.b3d
examples/Scene/: d3dapi.cpp  fullscreen.cpp  glapi.cpp  main.cpp  material.cpp  meshscenenode.cpp  rendertargets.cpp  scene.cpp  shaders.cpp  texturemanager.cpp
examples/Scene/include/: FullscreenPass.h  GfxApi.h  Material.h  MeshSceneNode.h  RenderTargets.h  Scene.h  Shaders.h  TextureManager.h  d3dapi.h  glapi.h
examples/TressFX/: CMakeLists.txt  common.cpp  common.hpp  tfx-ocl.cpp  tfx.cpp
examples/TressFX/TressFX.vulkan/: StringTokenizer.cpp  TFXFileIO.cpp  TressFX.vulkan.vcxproj  TressFX.vulkan.vcxproj.filters  main.cpp  sample.cpp  sample.h
examples/TressFX/shaders/: FSShading.frag  GlobalConstraints.comp  Hair.frag  Hair.vert  HairSM.vert  LengthWindTangentComputation.comp  LocalConstraints.comp  PrepareFollowHair.comp  Simulation.cl  Simulation.comp  UpdateFollowHair.comp  blit.frag  blit.vert  blit_vert.vert
examples/assets/: anchor.DDS  anchorBC5.DDS
examples/helper/: SampleClass.cpp  SampleClass.h  helper.vcxproj  helper.vcxproj.filters
examples/meshdx12/: CMakeLists.txt  d3d_interface.cpp  geometry.cpp  geometry.h  host_control.h  interface.cpp  main.cpp  mesh.cpp  mesh.dx12.vcxproj  mesh.dx12.vcxproj.filters  mesh.h  mesh.shared.vcxitems  mesh.vulkan.vcxproj  mesh.vulkan.vcxproj.filters  meshdx12.cpp  meshdx12.vcxproj  meshdx12.vcxproj.filters  packages.config  shaders.cpp  shaders.h  textures.cpp  vulkan_interface.cpp
examples/meshdx12/mesh-managed/: Class1.cs  Interface1.cs  YAGFControl.xaml  YAGFControl.xaml.cs  mesh_managed.csproj
examples/meshdx12/mesh-managed/Properties/: AssemblyInfo.cs
examples/meshdx12/mesh_dx12_managed/: App.xaml  App.xaml.cs  HostedGraphicSurface.cs  MainWindow.xaml  MainWindow.xaml.cs  mesh_dx12_managed.csproj
examples/meshdx12/mesh_dx12_managed/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
examples/meshdx12/mesh_vulkan_managed/: App.xaml  App.xaml.cs  HostedGraphicSurface.cs  MainWindow.xaml  MainWindow.xaml.cs  mesh_vulkan_managed.csproj
examples/meshdx12/mesh_vulkan_managed/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
examples/shaders/: FSShading.frag  Hair.frag  Hair.vert  HairSM.frag  HairSM.vert  LengthWindTangentComputation.comp  LocalConstraints.comp  Simulation.cl  Simulation.comp  computesh.comp  computesh.hlsl  dfg.comp  dfg.hlsl  gaussian_h.comp  gaussian_v.comp  gaussianh.hlsl  gaussianv.hlsl  ibl.frag  ibl.hlsl  importance_sampling_specular.comp  importance_sampling_specular.hlsl  linearize.hlsl  linearize_depth.comp  linearize_depth.frag  linearize_depth.txt  object.vert  object_gbuffer.frag  object_gbuffer.hlsl  object_pass_pix.hlsl  object_pass_vtx.hlsl  screenquad.hlsl  screenquad.vert  skinnedobject.hlsl  skybox.frag  skybox.hlsl  skybox.vert  skyboxvert.hlsl  ssao.comp  ssao.frag  ssao.hlsl  (+5 more)
include/API/: GfxApi.h  d3dapi.h  glapi.h  vkapi.h
include/Core/: BasicVertexLayout.h  FBO.h  IImage.h  IMeshBuffer.h  ISkinnedMesh.h  S3DVertex.h  SColor.h  Shaders.h  Singleton.h  VAO.h
include/D3DAPI/: ConstantBuffer.h  Context.h  D3DRTTSet.h  D3DS3DVertex.h  D3DTexture.h  Misc.h  PSO.h  Resource.h  RootSignature.h  S3DVertex.h  Sampler.h  Texture.h  VAO.h  pipeline_helpers.h  pipeline_layout_helpers.h
include/GLAPI/: Debug.h  FBO.h  GLRTTSet.h  GLS3DVertex.h  GLTexture.h  GLVertexStorage.h  Misc.h  S3DVertex.h  Text.h  Texture.h
include/Loaders/: B3D.h  DDS.h  IReadFile.h  PNG.h
include/Maths/: matrix4.h  quaternion.h  vector2d.h  vector3d.h
include/Scene/: FullscreenPass.h  IBL.h  ISceneNode.h  MeshManager.h  MeshSceneNode.h  Scene.h  Shaders.h  pso.h  ssao.h  textures.h
include/Util/: Debug.h  GeometryCreator.h  Misc.h  Samplers.h  Text.h
include/VKAPI/: pipeline_helpers.h  pipeline_layout_helpers.h  renderpass_helpers.h  vulkan_helpers.h
mesh.dx12/: App.xaml  App.xaml.cpp  App.xaml.h  MainPage.xaml  MainPage.xaml.cpp  MainPage.xaml.h  Package.appxmanifest  mesh.dx12.vcxproj  mesh.dx12.vcxproj.filters  mesh.dx12_TemporaryKey.pfx  packages.config
mesh_dx12_managed/: Form1.Designer.cs  Form1.cs  Program.cs  mesh_dx12_managed.csproj
mesh_dx12_managed/Properties/: AssemblyInfo.cs
src/: CMakeLists.txt  d3dapi.cpp  d3dshaders.cpp  fullscreen.cpp  glshaders.cpp  ibl.cpp  meshscenenode.cpp  pso.cpp  rendertargets.cpp  scene.cpp  ssao.cpp  textures.cpp  vkapi.cpp
src/shaders/glsl/: computesh.comp  gaussian_h.comp  gaussian_v.comp  object.vert  object_gbuffer.frag  ssao.frag  sunlight.frag  tonemap.frag
src/shaders/hlsl/: computesh.hlsl  gaussianh.hlsl  linearize_depth.hlsl  object.hlsl  screenquad.hlsl  skinnedobject.hlsl  skyboxvert.hlsl  ssao.hlsl  sunlight.hlsl
